--- a/package.json
+++ b/package.json
@@ -23,8 +23,10 @@
     "cookie-parser": "^1.4.3",
     "dotenv": "^4.0.0",
     "ejs": "^2.5.5",
+    "email-validator": "^1.0.7",
     "express": "^4.14.0",
     "express-session": "^1.14.2",
+    "gmail-send": "^1.2.6",
     "morgan": "^1.7.0",
     "passport": "^0.3.2"
   }
